clusters/home/gateway/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
