clusters/home/gateway/app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-private
spec:
  addresses:
    - type: IPAddress
      value: "${GW_IPV6}"
    - type: IPAddress
      value: "${GW_IPV4}"
  gatewayClassName: cilium-gw-private
  allowedListeners:
    namespaces:
      from: Selector
      selector:
        matchLabels:
          private-gateway-listeners: "true"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.${SECRET_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: wildcard-cert
        mode: Terminate
